ci(prod deploy): add django static collection step

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -21,6 +21,8 @@ jobs:
         run: yarn --frozen-lockfile
       - name: Install python dependencies
         run: pip install -r requirements.txt
+      - name: Collect static files
+        run: python manage.py collectstatic
       - name: Deploy to Prod
         run: npm run deploy:prod
         env:
