--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,7 @@
 #    pip-compile requirements-dev.in
 #
 click==7.1.2              # via pip-tools
+django-dotenv==1.4.2      # via -r requirements-dev.in
 flake8-commas==2.0.0      # via -r requirements-dev.in
 flake8==3.8.3             # via -r requirements-dev.in, flake8-commas
 mccabe==0.6.1             # via flake8
