--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@
 #    pip-compile requirements.in
 #
 asgiref==3.2.10           # via django
+django-dotenv==1.4.2      # via -r requirements.in
 django-filter==2.3.0      # via -r requirements.in
 django==3.1               # via -r requirements.in, django-filter, djangorestframework, zappa-django-utils
 djangorestframework==3.11.1  # via -r requirements.in
