--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -23,6 +23,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Collect static files
         run: python manage.py collectstatic
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
       - name: Deploy to Prod
         run: npm run deploy:prod
         env:
