--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@
 #    pip-compile requirements.in
 #
 asgiref==3.2.10           # via django
+django-cors-headers==3.4.0  # via -r requirements.in
 django-dotenv==1.4.2      # via -r requirements.in
 django-filter==2.3.0      # via -r requirements.in
-django==3.1               # via -r requirements.in, django-filter, djangorestframework, zappa-django-utils
+django==3.1               # via -r requirements.in, django-cors-headers, django-filter, djangorestframework, zappa-django-utils
 djangorestframework==3.11.1  # via -r requirements.in
 pytz==2020.1              # via django
 sqlparse==0.3.1           # via django
