refactor(django): use standalone package for s3 db

--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,8 @@
 Django
 djangorestframework
 django-filter
-zappa-django-utils
 whitenoise
 werkzeug
 django-dotenv
 django-cors-headers
+django-s3-sqlite
