--- a/serverless.yml
+++ b/serverless.yml
@@ -55,6 +55,6 @@ functions:
       SECRET_KEY: ${env:SECRET_KEY}
     events:
       - schedule:
-          rate: cron(0 2 * * ? *)
+          rate: rate(12 hours)
           input:
             command: fetch_events
